@@ -664,6 +664,18 @@ CONFIG
 
       PerlSetVar CompressGzip 1
 
+    TimeHiRes
+    default 0, if set and Time::HiRes is installed, will do sub second
+    timing of the time it takes Apache::ASP to process a request. This will
+    not include the time spent in the session manager, nor modperl or
+    Apache, and is only a rough approximation at best.
+
+    If Debug is set also, you will get a comment in your HTML output that
+    indicates the time it took to process that script.
+
+    If system debugging is set with Debug -1 or -2, you will also get this
+    time in the Apache error log with the other system messages.
+
   Mail Administration
 
     Apache::ASP has some powerful administrative email extensions that let
@@ -1745,11 +1757,11 @@ XML/XSLT
   Custom Tags with XMLSubsMatch
 
     Before XML, there was the need to make HTML markup smarter. Apache::ASP
-    v.19 gives you the ability to have a perl subroutine handle the
-    execution of any predefined tag, taking the tag descriptors, and the
-    text contained between, as arguments of the subroutine. This custom tag
-    technology can be used to extend a web developer's abilities to add
-    dynamic pieces without having to visibly use <% %> style code entries.
+    gives you the ability to have a perl subroutine handle the execution of
+    any predefined tag, taking the tag descriptors, and the text contained
+    between, as arguments of the subroutine. This custom tag technology can
+    be used to extend a web developer's abilities to add dynamic pieces
+    without having to visibly use <% %> style code entries.
 
     So, lets say that you have table that you want to insert for an employee
     with contact info and the like, you could set up a tag like:
