@@ -1,3 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 
+perl /perl/bin/pod2text -80 < ../ASP.pm  > ../README
 ../cgi/asp -b -o ../site ./*.html
