@@ -264,7 +264,7 @@ per directory.</font>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
-			<a href=#Debug><font color=#003090>Debug</font></a>
+			<a href=#DebugBufferLength><font color=#003090>DebugBufferLength</font></a>
 			</font>
 			</td>
 							
@@ -280,7 +280,7 @@ per directory.</font>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
-			<a href=#DebugBufferLength><font color=#003090>DebugBufferLength</font></a>
+			<a href=#PodComments><font color=#003090>PodComments</font></a>
 			</font>
 			</td>
 							
@@ -296,22 +296,6 @@ per directory.</font>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
-			<a href=#PodComments><font color=#003090>PodComments</font></a>
-			</font>
-			</td>
-							
-		</tr>
-		
-		<tr>
-		
-			<td valign=top >
-			<font face="lucida console" size=-1>
-			<a href=#UniquePackages><font color=#003090>UniquePackages</font></a>
-			</font>
-			</td>
-		
-			<td valign=top >
-			<font face="lucida console" size=-1>
 			
 			</font>
 			</td>
@@ -322,7 +306,7 @@ per directory.</font>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
-			<a href=#DynamicIncludes><font color=#003090>DynamicIncludes</font></a>
+			<a href=#UniquePackages><font color=#003090>UniquePackages</font></a>
 			</font>
 			</td>
 		
@@ -338,7 +322,7 @@ per directory.</font>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
-			<a href=#IncludesDir><font color=#003090>IncludesDir</font></a>
+			<a href=#DynamicIncludes><font color=#003090>DynamicIncludes</font></a>
 			</font>
 			</td>
 		
@@ -354,13 +338,29 @@ per directory.</font>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
-			
+			<a href=#IncludesDir><font color=#003090>IncludesDir</font></a>
 			</font>
 			</td>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
 			<a href=#XSLT><font color=#003090>XSLT</font></a>
+			</font>
+			</td>
+							
+		</tr>
+		
+		<tr>
+		
+			<td valign=top >
+			<font face="lucida console" size=-1>
+			
+			</font>
+			</td>
+		
+			<td valign=top >
+			<font face="lucida console" size=-1>
+			<a href=#XSLTMatch><font color=#003090>XSLTMatch</font></a>
 			</font>
 			</td>
 							
@@ -376,7 +376,7 @@ per directory.</font>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
-			<a href=#XSLTMatch><font color=#003090>XSLTMatch</font></a>
+			<a href=#XSLTCacheSize><font color=#003090>XSLTCacheSize</font></a>
 			</font>
 			</td>
 							
@@ -392,22 +392,6 @@ per directory.</font>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
-			<a href=#XSLTCacheSize><font color=#003090>XSLTCacheSize</font></a>
-			</font>
-			</td>
-							
-		</tr>
-		
-		<tr>
-		
-			<td valign=top >
-			<font face="lucida console" size=-1>
-			<a href=#AllowSessionState><font color=#003090>AllowSessionState</font></a>
-			</font>
-			</td>
-		
-			<td valign=top >
-			<font face="lucida console" size=-1>
 			
 			</font>
 			</td>
@@ -418,7 +402,7 @@ per directory.</font>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
-			<a href=#AllowApplicationState><font color=#003090>AllowApplicationState</font></a>
+			<a href=#AllowSessionState><font color=#003090>AllowSessionState</font></a>
 			</font>
 			</td>
 		
@@ -434,7 +418,7 @@ per directory.</font>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
-			<a href=#StateDir><font color=#003090>StateDir</font></a>
+			<a href=#AllowApplicationState><font color=#003090>AllowApplicationState</font></a>
 			</font>
 			</td>
 		
@@ -450,7 +434,7 @@ per directory.</font>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
-			<a href=#StateManager><font color=#003090>StateManager</font></a>
+			<a href=#StateDir><font color=#003090>StateDir</font></a>
 			</font>
 			</td>
 		
@@ -466,7 +450,7 @@ per directory.</font>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
-			<a href=#StateDB><font color=#003090>StateDB</font></a>
+			<a href=#StateManager><font color=#003090>StateManager</font></a>
 			</font>
 			</td>
 		
@@ -482,7 +466,7 @@ per directory.</font>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
-			<a href=#StateCache><font color=#003090>StateCache</font></a>
+			<a href=#StateDB><font color=#003090>StateDB</font></a>
 			</font>
 			</td>
 		
@@ -498,7 +482,7 @@ per directory.</font>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
-			<a href=#StateSerializer><font color=#003090>StateSerializer</font></a>
+			<a href=#StateCache><font color=#003090>StateCache</font></a>
 			</font>
 			</td>
 		
@@ -514,13 +498,29 @@ per directory.</font>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
-			
+			<a href=#StateSerializer><font color=#003090>StateSerializer</font></a>
 			</font>
 			</td>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
 			<a href=#Filter><font color=#003090>Filter</font></a>
+			</font>
+			</td>
+							
+		</tr>
+		
+		<tr>
+		
+			<td valign=top >
+			<font face="lucida console" size=-1>
+			
+			</font>
+			</td>
+		
+			<td valign=top >
+			<font face="lucida console" size=-1>
+			<a href=#CgiHeaders><font color=#003090>CgiHeaders</font></a>
 			</font>
 			</td>
 							
@@ -536,7 +536,7 @@ per directory.</font>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
-			<a href=#CgiHeaders><font color=#003090>CgiHeaders</font></a>
+			<a href=#Clean><font color=#003090>Clean</font></a>
 			</font>
 			</td>
 							
@@ -552,7 +552,7 @@ per directory.</font>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
-			<a href=#Clean><font color=#003090>Clean</font></a>
+			<a href=#CompressGzip><font color=#003090>CompressGzip</font></a>
 			</font>
 			</td>
 							
@@ -568,7 +568,7 @@ per directory.</font>
 		
 			<td valign=top >
 			<font face="lucida console" size=-1>
-			<a href=#CompressGzip><font color=#003090>CompressGzip</font></a>
+			<a href=#TimeHiRes><font color=#003090>TimeHiRes</font></a>
 			</font>
 			</td>
 							
@@ -755,6 +755,16 @@ per directory.</font>
 			<td valign=top >
 			<font face="lucida console" size=-1>
 			<a href=#UseStrict><font color=#003090>UseStrict</font></a>
+			</font>
+			</td>
+		<td>&nbsp;</td>					
+		</tr>
+		
+		<tr>
+		
+			<td valign=top >
+			<font face="lucida console" size=-1>
+			<a href=#Debug><font color=#003090>Debug</font></a>
 			</font>
 			</td>
 		<td>&nbsp;</td>					
@@ -1490,6 +1500,24 @@ No work around has yet been found for this case so use at your
 own risk.
 <font face="lucida console,courier new" size=3><pre>
   PerlSetVar CompressGzip 1 </pre></font>
+	
+	<p>
+	<a name=TimeHiRes></a>
+	<font face=verdana><font size=-1 color=#555555><b>TimeHiRes</b></font><p>
+<font face="lucida console,courier new" size=3><pre>
+</pre></font>default 0, if set and Time::HiRes is installed, will do 
+sub second timing of the time it takes Apache::ASP to process
+a request.  This will not include the time spent in the 
+session manager, nor modperl or Apache, and is only a 
+rough approximation at best.
+<font face="lucida console,courier new" size=3><pre>
+</pre></font>If Debug is set also, you will get a comment in your
+HTML output that indicates the time it took to process
+that script.
+<font face="lucida console,courier new" size=3><pre>
+</pre></font>If system debugging is set with Debug -1 or -2, you will
+also get this time in the Apache error log with the 
+other system messages.</font>
 	
 	<p>
 	<a name=Mail%20Administration></a>
