@@ -15,6 +15,8 @@ PerlSetVar SessionQuery 1
 PerlSetVar Debug -2
 PerlSetVar StateCache 0
 PerlSetVar SessionCount 1
+PerlSetVar TimeHiRes 1
+PerlSetVar CompressGzip 0
 
 # .asp files for Session state enabled
 <Files ~ (\.asp)>
