@@ -269,7 +269,7 @@
 	<font face=verdana><font size=+0 color=#555555><b>Custom Tags with XMLSubsMatch</b></font><p>
 <font face="lucida console,courier new" size=3><pre>
 </pre></font>Before XML, there was the need to make HTML markup smarter.
-Apache::ASP v.19 gives you the ability to have a perl
+Apache::ASP gives you the ability to have a perl
 subroutine handle the execution of any predefined tag,
 taking the tag descriptors, and the text contained between,
 as arguments of the subroutine.  This custom tag
